--- a/ife-beginner-5+6/css/style_1.css
+++ b/ife-beginner-5+6/css/style_1.css
@@ -2,15 +2,20 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.base-info span strong {
+.row-content p span strong {
     margin-right: 10px;
 }
 
-.base-info span {
+.row-content p span {
     margin-right: 25px;
 }
 
-.detail-info strong {
+ul {
+    list-style: none outside;
+    padding: 0;
+}
+
+ul li strong {
     display: block;
 }
 
