--- a/ife-beginner-5+6/css/style_2.css
+++ b/ife-beginner-5+6/css/style_2.css
@@ -1,11 +1,9 @@
-
-
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 #container {
-    height: 730px;
+    height: 750px;
 }
 
 #header {
@@ -27,14 +25,19 @@ body {
     height: 100%;
 }
 
-.base-info span strong {
+.row-content p span strong {
     margin-right: 10px;
 }
 
-.base-info span {
+.row-content p span {
     margin-right: 25px;
 }
 
-.detail-info strong {
+ul {
+    list-style: none outside;
+    padding: 0;
+}
+
+ul li strong {
     display: block;
 }
