--- a/ife-beginner-7-8/css/style.css
+++ b/ife-beginner-7-8/css/style.css
@@ -35,7 +35,7 @@ html {
     position: relative;
     width: 100%;
     height: 300px;
-    background: #1a1;
+    background: #7d5;
 }
 
 ul {
@@ -48,14 +48,68 @@ ul li {
     display: inline-block;
 }
 
-#banner ul {
+#banner a {
+    text-decoration: none;
+    color: #000;
+}
+
+#banner .item-container {
     position: absolute;
     bottom: 10px;
-    right: 200px;
+    right: 22%;
 }
 
-#banner ul li {
-    width: 10px;
-    height: 20px;
+#banner .item-container a {
+    display: inline-block;
+    position: relative;
+    width: 30px;
+    height: 45px;
+    background: #ddd;
+    opacity: 0.5;
+    border: 1px solid #111;
+
+}
+#banner .item-container a:focus {
+    height: 55px;
+    opacity: 1;
 }
 
+.banner-item {
+    position: absolute;
+    bottom: 0;
+    width: 30px;
+    line-height: 45px;
+    text-align: center;
+}
+
+#tab {
+    width: 100;
+    border-bottom: 1px solid #888;
+}
+
+#tab ul {
+    width: 980px;
+    height: 90px;
+    margin: 0 auto;
+}
+
+#main {
+    width: 980px;
+    display: flex;
+    flex-flow: row wrap;
+}
+
+.content {
+    flex: 1;
+}
+
+#footer {
+    position: absolute;
+    bottom: 0;
+    background: #555;
+    width: 100%;
+    line-height: 50px;
+    height: 100px;
+    color: #fff;
+    text-align: center;
+}
