--- a/ife-beginner-7-8/css/style.css
+++ b/ife-beginner-7-8/css/style.css
@@ -1,5 +1,15 @@
-html {
+body {
     font-family: Consolas, "Courier New", monospace;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+ul li {
+    display: inline-block;
 }
 
 #header {
@@ -10,7 +20,7 @@ html {
 
 #header-content {
     position: relative;
-    width: 980px;
+    width: 960px;
     margin: 0 auto;
 }
 
@@ -35,22 +45,19 @@ html {
     position: relative;
     width: 100%;
     height: 300px;
-    background: #7d5;
 }
 
-ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
+.banner-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -2;
+    width: 100%;
+    height: 100%;
 }
 
-ul li {
-    display: inline-block;
-}
-
-#banner a {
-    text-decoration: none;
-    color: #000;
+.banner-image-active {
+    z-index: -1;
 }
 
 #banner .item-container {
@@ -59,53 +66,73 @@ ul li {
     right: 22%;
 }
 
-#banner .item-container a {
+.banner-item {
     display: inline-block;
     position: relative;
     width: 30px;
-    height: 45px;
+    height: 35px;
     background: #ddd;
     opacity: 0.5;
     border: 1px solid #111;
-
 }
-#banner .item-container a:focus {
-    height: 55px;
+
+.banner-active {
+    height: 45px;
     opacity: 1;
 }
 
-.banner-item {
+#banner .item-container a span {
     position: absolute;
     bottom: 0;
     width: 30px;
-    line-height: 45px;
+    line-height: 35px;
     text-align: center;
 }
 
 #tab {
-    width: 100;
-    border-bottom: 1px solid #888;
+    border-bottom: 1px solid #ddd;
 }
 
 #tab ul {
-    width: 980px;
+    position: relative;
+    width: 960px;
     height: 90px;
     margin: 0 auto;
 }
 
+.tab-item {
+    float: left;
+    position: relative;
+    top: 39px;
+    width: 100px;
+    line-height: 50px;
+    text-align: center;
+    background-color: #e8e8e8;
+    border: 1px solid #ddd;
+    border-radius: 20px 20px 0 0;
+}
+
+.active-tab {
+    background-color: #fff;
+    border-bottom: 1px solid #fff;
+}
+
 #main {
-    width: 980px;
+    width: 960px;
     display: flex;
-    flex-flow: row wrap;
+    flex-wrap: wrap;
+    margin: 10px auto;
 }
 
 .content {
-    flex: 1;
+    flex: 1 1;
+    padding: 80px;
+    margin: 3px;
+    border: 1px outset #ddd;
+    font-size: 18px;
 }
 
 #footer {
-    position: absolute;
-    bottom: 0;
     background: #555;
     width: 100%;
     line-height: 50px;
